<resources>
    <string name="app_name">Shop catalog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_phone">Phone</string>
    <string name="menu_tv">TV</string>
    <string name="menu_watch">Watch</string>
    <string name="menu_fridge">Fridge</string>
    <string name="menu_furniture">Furniture</string>

    <string name="product_name_default">Name product</string>
    <string name="product_name">Name</string>
    <string name="product_code">Product code:</string>
    <string name="product_price">Price:</string>
    <string name="product_price_currency">KZT</string>
    <string name="product_more">More information</string>

    <string name="display_info_error">Oops! Something went wrong!</string>
    <string name="display_info_connection">Internet is connected</string>
    <string name="display_info_no_connection">No internet connection</string>
</resources>