<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_phone"
            android:icon="@drawable/ic_baseline_phone_iphone_24"
            android:title="@string/menu_phone" />
        <item
            android:id="@+id/nav_tv"
            android:icon="@drawable/ic_baseline_tv_24"
            android:title="@string/menu_tv" />
        <item
            android:id="@+id/nav_watch"
            android:icon="@drawable/ic_baseline_watch_24"
            android:title="@string/menu_watch" />
        <item
            android:id="@+id/nav_fridge"
            android:icon="@drawable/ic_baseline_sensor_door_24"
            android:title="@string/menu_fridge" />
        <item
            android:id="@+id/nav_furniture"
            android:icon="@drawable/ic_baseline_weekend_24"
            android:title="@string/menu_furniture" />
    </group>
</menu>